Small fixes to the lightbox (copy)

--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -1,20 +1,23 @@
 <% form_remote_for(tmpl, :method => method, :html => {:id => "print-template-form"}, :loading => "Status.show()", :complete => "Status.hide();") do |f| %>
-  <div class="header">
-    <%= f.label :name, "Name:" %>
-    <%= f.text_field :name %>
-  </div>
+<div class="header">
+  <%= f.label :name, "Name:" %>
+  <%= f.text_field :name %>
+</div>
+<div class="template-code">    
+  <%= f.label :name, "Edit Template" %>
+  <%= f.text_area :body, :id => 'template-editor', :class => 'expanding' %>  
+</div>
 
-  <%= f.text_area :body, :id => 'template-editor', :rows => 15 %>
+<%= render :partial => 'editor_help' %>
 
-  <%= render :partial => 'editor_help' %>
+<div class="button-panel">
+  <p class="buttons">
+    <%= submit_tag(method.to_sym == :post ? "Create" : "Update" )%>
+    or
+    <%= link_to_function "Cancel", "Dialog.close();", :class => 'action' %>
+  </p>
+</div>
 
-  <div class="button-panel">
-    <p class="buttons">
-      <%= submit_tag(method.to_sym == :post ? "Create" : "Update" )%>
-      or
-      <%= link_to_function "Cancel", "Dialog.close();", :class => 'action' %>
-    </p>
-  </div>
 <% end %>
 
 <% if method.to_sym == :post %>
