Implemented edit-mode for template in sidebar. edit and remove links are now gone from preview.

--- a/app/views/orders/_template_checkbox.html.erb
+++ b/app/views/orders/_template_checkbox.html.erb
@@ -1,4 +1,9 @@
 <% content_tag(:li, :class => "template-item", :id => "template-item-#{tmpl.id}") do %>
   <%= check_box_tag 'print_templates[]', tmpl.id, tmpl.default %>
   <%= label_tag "template-checkbox-#{tmpl.id}", tmpl.name %>
+  <span class="template-options" style="display: none;"> 
+    <%= link_to_remote "Edit", :url => {:controller => 'print_templates', :action => 'edit', :id => tmpl.id}, :method => 'get' %> | 
+    <%= link_to_remote image_tag("trash.gif"), :url => tmpl, :method => :delete, :confirm => "Are you sure you want to delete template \"#{tmpl.name}\"?", :loading => "Status.show();", :complete => "Status.hide();" %>
+  </span>
+  
 <% end %>
