Starting resizing implementation in JS for textarea in dialog. (Needs more work, broken now).

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -95,7 +95,7 @@ a:hover, a:focus, a:active {color:#265d8b;}
 
 #modal-dialog {}
 
-#print-template-form textarea {	width: 100%; overflow:visible;}
+#print-template-form textarea {	width: 100%;}
 
 #print-template-form .default * {
 	vertical-align: top;
