--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -1,16 +1,16 @@
 <% form_remote_for(tmpl, :method => method, :html => {:id => "print-template-form"}, :loading => "Status.show()", :complete => "Status.hide();") do |f| %>
-<div class="header">
+<div class="header fixed">
   <%= f.label :name, "Name:" %>
   <%= f.text_field :name %>
 </div>
-<div class="template-code">    
+<div class="template-code fixed">    
   <%= f.label :name, "Edit Template" %>
-  <%= f.text_area :body, :id => 'template-editor', :class => 'expanding' %>  
+  <%= f.text_area :body, :id => 'template-editor', :rows => "40%" %>  
 </div>
 
 <%= render :partial => 'editor_help' %>
 
-<div class="button-panel">
+<div class="button-panel fixed">
   <p class="buttons">
     <%= submit_tag(method.to_sym == :post ? "Create" : "Update" )%>
     or
