Fixed application JS. Resizing the dialog now correctly resizes the inside textarea.

--- a/app/views/print_templates/_editor_help.html.erb
+++ b/app/views/print_templates/_editor_help.html.erb
@@ -1,4 +1,4 @@
-<div class="help">
+<div class="help fixed">
   <%= link_to_function "Help", "$('#editor-help-links').slideToggle('fast');" %>
   <ul id="editor-help-links" style="display: none">
     <p>Use HTML, CSS and Liquid to customize your templates.</p>
