Fixed resizing problem in Dialog with textarea.

--- a/app/views/print_templates/_editor_help.html.erb
+++ b/app/views/print_templates/_editor_help.html.erb
@@ -1,5 +1,5 @@
 <div class="help fixed">
-  <%= link_to_function "Help", "$('#editor-help-links').slideToggle('fast');" %>
+  <%= link_to_function "Display help", "Help.toggle();" %>
   <ul id="editor-help-links" style="display: none">
     <p>Use HTML, CSS and Liquid to customize your templates.</p>
     
