--- a/app/views/orders/_preview.html.erb
+++ b/app/views/orders/_preview.html.erb
@@ -3,7 +3,7 @@
   <!-- new preview -->
   <div class="preview-top" >
     <div class="template-actions">
-     
+     <img src="/images/button-clip.png" width="68" height="42" alt="Button Clip" class="aesthetic-clip" />
       <p class="template-name"><%= tmpl.name %> &nbsp;</p>
     </div>
   </div>
