--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -24,9 +24,11 @@
     <% end %>
   </div>
 
-  <div class="sidebar-block "> <!-- print -->
+  <div class="sidebar-block" id="print-button"> <!-- print -->
     <%= link_to_function image_tag("button-print.png"), "Templates.print()", :style => "margin: 10px 0 0px 0" %>
+    <p style="font-size: 12px; 	text-align: center;"><%= content_tag :span, "0 documents", :id => "template-amount" %> will be printed.</p>
 	</div><!-- last sidebar block -->
+	
 	<img src="../images/logo.png" width="229" height="176" alt="Logo" class="logo" style="margin-top:-10px" />
 </div><!--sidebar-->
 
