Added edit buttons and fixed some css.

--- a/app/views/orders/_preview.html.erb
+++ b/app/views/orders/_preview.html.erb
@@ -4,7 +4,7 @@
   <div class="preview-top" >
     <div class="template-actions">
      <img src="/images/button-clip.png" width="68" height="42" alt="Button Clip" class="aesthetic-clip" />
-      <p class="template-name"><%= tmpl.name %> &nbsp;</p>
+      <p class="template-name"><strong><em><%= tmpl.name %> &nbsp;</em></strong></p>
     </div>
   </div>
 
