Integrated print mode button images. Removed inline help and switched to a simple link to a (yet empty) wiki page.

--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="template-code">    
-    <%= render :partial => 'editor_help' %>
+    <%= link_to "Open help", "http://wiki.shopify.com/Printing", :target => 'wiki' %>
     <%= f.text_area :body, :id => 'template-editor' %>  
   </div>
 
