--- a/public/stylesheets/jquery-ui-1.7.1.custom.css
+++ b/public/stylesheets/jquery-ui-1.7.1.custom.css
@@ -57,7 +57,7 @@
 ----------------------------------*/
 .ui-state-default, .ui-widgeuit-content .ui-state-default { border: 1px solid #cccccc; background: #f6f6f6 url(/images/jqueryui-lightness/ui-bg_glass_100_f6f6f6_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #1c94c4; outline: none; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #1c94c4; text-decoration: none; outline: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus { border: 1px solid #fbcb09; background: #fdf5ce url(/images/jqueryui-lightness/ui-bg_glass_100_fdf5ce_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #c77405; outline: none; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus { padding: 1px ; font-weight: bold; outline: none; }      
 .ui-state-hover a, .ui-state-hover a:hover { color: #c77405; text-decoration: none; outline: none; }
 .ui-state-active, .ui-widget-content .ui-state-active { border: 1px solid #fbd850; background: #ffffff url(/images/jqueryui-lightness/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #eb8f00; outline: none; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #eb8f00; outline: none; text-decoration: none; }
@@ -81,7 +81,7 @@
 .ui-widget-content .ui-icon {background-image: url(/images/jqueryui-lightness/ui-icons_222222_256x240.png); }
 .ui-widget-header .ui-icon {background-image: url(/images/jqueryui-lightness/ui-icons_ffffff_256x240.png); }
 .ui-state-default .ui-icon { background-image: url(/images/jqueryui-lightness/ui-icons_ef8c08_256x240.png); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(/images/jqueryui-lightness/ui-icons_ef8c08_256x240.png); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(/images/jqueryui-lightness/ui-icons_ef8c08_256x240.png); }        
 .ui-state-active .ui-icon {background-image: url(/images/jqueryui-lightness/ui-icons_ef8c08_256x240.png); }
 .ui-state-highlight .ui-icon {background-image: url(/images/jqueryui-lightness/ui-icons_228ef1_256x240.png); }
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(/images/jqueryui-lightness/ui-icons_ffd27a_256x240.png); }
