Some fixes for IE:   * added js file for a IE fix (add Array#indexOf, because it's not defined in IE)   * removed JQuery live handlers and replaced with old inline event binding with an ID (check _template_checkbox.html.erb)   * set JS Debug mode to false (so that it runs in browsers without Firebug, ie. 'console')   * instead of $.load() use $.get() to load the preview (load didn't work in IE as the content type doesn't seem to be set properly so the query params get stripped) API problems:   * hardcoded money_format and money_with_currency_format in shopify_api_liquid (TODO: remove when this gets exported in Shopify)   * also fixed unit tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,11 @@
 	<meta name="MSSmartTagsPreventParsing" content="true" />
 
   <title><%= APP_NAME %></title>
- <%= stylesheet_link_tag 'jquery-ui-1.7.1.custom', 'style', :media => 'screen' %>
- 
+  <%= stylesheet_link_tag 'jquery-ui-1.7.1.custom', 'style', :media => 'screen' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
 
-  <%= javascript_include_tag :defaults, 'jquery-ui' %> 
+  <%= javascript_include_tag 'ie-fixes', :defaults, 'jquery-ui' %> 
    
-  
   <% javascript_tag do %>
     <% if flash[:notice] %>
       window.onload = function() { Messenger.notice(<%= h(flash[:notice]).inspect %>); }
@@ -28,6 +26,7 @@
     $(document).ready(function() {
       <%= yield :javascript %>
     });
+    
   <% end %> 
 
 
