minor css stuff

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -10,7 +10,7 @@
       <p><label for="shop"><strong>http://www. </strong></label><%= text_field_tag 'shop', nil, :size => 14 %></p>
         <p><input type="image" value="login" name="login" src="images/button-login.png"></p>  
       </div>      
-      <div class="sidebar-block" 
+      <div class="sidebar-block"> 
       <p class="low-em">
         First you have to register this app with a shop to allow access to its private admin data.
       </p>
