fixing ie7 error

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -22,11 +22,12 @@
     <% end %>
   </div>
 
-  <div class="sidebar-block" id="print-button"> <!-- print -->
+  <div class="sidebar-block clearfix" id="print-button"> <!-- print -->
     <%= link_to_function image_tag("button-print.png"), "Templates.print()", :style => "margin: 10px 0 0px 0" %>
     <p style="font-size: 12px; 	text-align: center;"><%= content_tag :span, "0 documents", :id => "template-amount" %> will be printed.</p>
 	</div><!-- last sidebar block -->
-	<img src="../images/logo.png" width="229" height="176" alt="Logo" class="logo" style="margin-top:-10px; background:red; margin:0;padding:0" />
+
+	<img src="../images/logo.png" width="229" height="176" alt="Logo" class="logo" />
 </div><!--sidebar-->
 
 <!-- This is populated later via AJAX and popped up with the dialog function of JQueryUI -->
