Refactored application.js:   * removed unneccessary screen dimension code (cargo cult), and used jquery's built in method instead   * removed the change listener from the checkboxes, as this fires too many events. click and keypress works (and is IE compatible)   * small fix in the package_slip template

--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -4,13 +4,13 @@
     <%= f.text_field :name %>
   </div>
   <div class="template-code">    
-    <%= link_to "Need help?", "http://wiki.shopify.com/Printing", :target => 'wiki' %>
-    <%= f.text_area :body, :id => 'template-editor' %>  
+    <%= link_to "Show help", "http://wiki.shopify.com/Printing", :target => 'wiki' %>
+    <%= f.text_area :body, :id => 'template_editor' %>  
   </div>
 
   <div class="button-panel fixed">
     <p class="buttons">
-      <%= submit_tag(method.to_sym == :post ? "Create" : "Update" )%>
+      <%= submit_tag(method.to_sym == :post ? "Create" : "Update" ) %>
       or
       <%= link_to_function "Cancel", "Dialog.close();", :class => 'action' %>
     </p>
