--- a/app/views/orders/_template_checkbox.html.erb
+++ b/app/views/orders/_template_checkbox.html.erb
@@ -12,7 +12,7 @@
 
 <% content_for :javascript do %>
 <!-- click and keypress are also explicitly listed here, as IE does not behave properly for change events only :( -->
-$("#template-checkbox-<%= tmpl.id %>").bind("change click keypress", function() {
+$("#template-checkbox-<%= tmpl.id %>").bind("click keypress", function() {
   Templates.updateSelection($(this));
 });
 <% end %>
