--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,13 +64,12 @@ body{background:url('../images/body-bg-wood.jpg');font-family:'Trebuchet MS','Ar
 .preview-top ul li {float:left; list-style-type:none; }
 
 #sidebar ul#list-templates {padding:3px 0 0 0; margin:0 0 0px 0 ;}
-#sidebar ul#list-templates li {color:#da6391; list-style-type:none;font-size:13px; }
-#sidebar ul#list-templates li input {margin:0px 0px 0 0; vertical-align:middle; padding:0;} 
-#sidebar ul#list-templates li label {line-height:25px;}          
+#sidebar ul#list-templates li {color:#da6391; list-style-type:none;font-size:13px; margin:0 0 3px 0;}
+#sidebar ul#list-templates li input {margin:0px 0px 0 0; vertical-align:middle; padding:0;}  
 
-#sidebar ul#list-templates  .template-options  {background: url('../images/button-edit-bg.png') no-repeat left; padding:0px 0 0px 10px; margin:4px 0 0 0px; float:left; margin-left:-45px; }    
+#sidebar ul#list-templates  .template-options  {background: url('../images/button-edit-bg.png') no-repeat left; padding:0px 0 2px 10px; margin:0px 0 1px -56px; float:left;  }    
 #sidebar ul#list-templates  .template-options a img { vertical-align:middle;}    
-#sidebar ul#list-templates  .template-options a {font-size:11.5px; margin-right:2px; }   
+#sidebar ul#list-templates  .template-options a {font-size:12px;}   
 #sidebar  p.template-editmode { text-align:right; margin:0 0 5px 0; }
                                                                                     
 /* ========= */
